--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 
 <style>
 
-    li {
+    .cs {
 
-        color: #00aeff;
+        font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
 
     }
 
-    ul {
+    
+    .SS {
 
-        color: #00aeff;
+        font-family: sans-serif;
 
+    }
+
+    a {
+
+        font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
+        width: 100;
+        height: 100;
     }
 
 
@@ -30,10 +38,15 @@
 
     <body>
 
-        <h1>
+        <h1 class="SS">
             Who am I?
         </h1>
 
+        <p class="cs">
+
+                Hello, I am MrMagoo8888, I do game dev, web dev and most things tech.
+
+        </p>
 
 
 
@@ -53,8 +66,7 @@
 
 
 
-
-    <h2>
+    <h2 class="SS">
         My Links
     </h2>
 
